# metcam

./: .gitignore  AGENTS.md  CONTRIBUTING.md  DEPLOYMENT.md  PANORAMA_API_INTEGRATION.md  PANORAMA_VERIFICATION_REPORT.md  QUALITY_TEAM_SUMMARY.md  QUEEN_VALIDATION_REPORT.md  README.md  SYSTEM_CLEANUP_PLAN.md  deploy_enhanced.sh  integration-map.json  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci-cd.yml  ci.yml  deploy-metcam-production.yml  hardware-regression-matrix.yml  main.yml
compliance/: COMPLIANCE_REPORT.md  README.md
config/: camera_config.json  panorama_config.json
deploy/: CHECKLIST.md  README.md  deploy-safe.sh  footballvision-api.service  install-complete.sh  install.sh  performance-test.sh  quick-test.sh  validate.sh
deploy/config/: Caddyfile
deploy/systemd/: footballvision-api-dev.service  footballvision-api-enhanced.service
deployment/: README.md
deployment/installer/: install.sh
deployment/scripts/: system-check.sh
docs/: API.md  ARCHITECTURE.md  BASELINE_RECORDING_PREVIEW_FALLBACK.md  CAMERA_CONFIGURATION.md  CAMERA_CONTROLS_QUICK_GUIDE.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_WORKFLOW.md  HARDWARE_SETUP.md  NEXTCLOUD_INTEGRATION_GUIDE.md  PANORAMA_HANDOVER.md  PANORAMA_MASTER_GUIDE.md  PANORAMA_STITCHING_PLAN.md  README.md  RECORDING_PIPELINE_PARAMETER_BASELINE.md  RECORDING_REGRESSION_MATRIX.md  RECORDING_SLO.md  SYSTEM_DOCUMENTATION.md  TROUBLESHOOTING.md
docs/architecture/: adr-template.md
docs/development/: setup.md
docs/teams/: structure.md
docs/technical/: API_REFERENCE.md  GSTREAMER_PIPELINES.md
monitoring/: README.md
reports/: 2025-02-15-4k-rotation-progress.md  2025-02-15-repo-sync-and-4k-experiment.md
scripts/: apply_system_optimizations.sh  fv_status  merge_segments.sh  mjpeg_http_server.py  power_loss_recovery.sh  record_1080p30_rotated.sh  record_4k_rotation_test.sh  record_dual_1080p30.sh  record_dual_4k30_rotated.sh  record_dual_gpu_with_correction.py  record_test_simple.sh  recording_watchdog.sh  run_recording_regression_matrix.py  setup_resilience.sh  start_calibration_preview.sh  start_preview_hls_fixed.sh  start_preview_hw.sh  start_preview_mjpeg.sh  system_health_monitor.sh  verify_boot.sh
shaders/: barrel_correction.frag  barrel_correction_with_rotation.frag  camera_rotation_config.py  shader_generator.py
src/processing/: CMakeLists.txt  DEPLOYMENT.md
src/processing/barrel-correction/: CMakeLists.txt  Makefile  undistort_kernel.cu
src/processing/examples/: process_game.py
src/processing/src/processing/: README.md  __init__.py  pipeline.py  simple_sidebyside.py
src/processing/src/processing/architecture/: __init__.py
src/processing/src/processing/batch-manager/: __init__.py
src/processing/src/processing/calibration/: __init__.py
src/processing/src/processing/color-matching/: __init__.py
src/processing/src/processing/gpu-memory/: __init__.py  gpu_memory_manager.py
src/processing/src/processing/optimization/: __init__.py
src/processing/src/processing/panoramic-stitcher/: __init__.py
src/processing/src/processing/quality-metrics/: __init__.py
src/processing/src/processing/video-codec/: __init__.py
src/video-pipeline/: CMakeLists.txt  DEPLOYMENT_SUMMARY.md  QUICK_START.md  README.md  TROUBLESHOOTING.md  brightness_controller.py  build.sh  camera_config_manager.py  exposure_sync_service.py  gstreamer_manager.py  nextcloud_upload_service.py  pipeline_builders.py  pipeline_manager.py  post_processing_service.py  preview_service.py  preview_service_gpu_corrected.py  r2_upload_service.py  recording_manager.py  recording_service.py
src/video-pipeline/camera-control/: CMakeLists.txt  README.md
src/video-pipeline/camera-control/include/: camera_control.h
src/video-pipeline/camera-control/src/: camera_control.cpp
src/video-pipeline/camera-control/tests/: test_camera_control.cpp
src/video-pipeline/gstreamer-core/: CMakeLists.txt  README.md
src/video-pipeline/gstreamer-core/include/: gstreamer_pipeline.h  nvmm_buffer_manager.h
src/video-pipeline/gstreamer-core/src/: gstreamer_pipeline.cpp  nvmm_buffer_manager.cpp
src/video-pipeline/gstreamer-core/tests/: test_pipeline.cpp
src/video-pipeline/main/: recorder_main.cpp
src/video-pipeline/nvenc-integration/: CMakeLists.txt  README.md
src/video-pipeline/nvenc-integration/include/: nvenc_encoder.h
src/video-pipeline/nvenc-integration/src/: nvenc_encoder.cpp
src/video-pipeline/pipeline-architecture/: CMakeLists.txt  README.md
src/video-pipeline/pipeline-architecture/include/footballvision/: interfaces.h
src/video-pipeline/pipeline-monitor/: CMakeLists.txt  README.md
src/video-pipeline/pipeline-monitor/include/: pipeline_monitor.h
src/video-pipeline/pipeline-monitor/src/: pipeline_monitor.cpp
src/video-pipeline/preview-pipeline/: CMakeLists.txt  README.md
src/video-pipeline/preview-pipeline/include/: preview_pipeline.h
src/video-pipeline/preview-pipeline/src/: preview_pipeline.cpp
src/video-pipeline/recording-manager/: CMakeLists.txt  README.md
src/video-pipeline/recording-manager/include/: recording_manager.h
src/video-pipeline/recording-manager/src/: recording_manager.cpp
src/video-pipeline/recovery-system/: CMakeLists.txt  README.md
src/video-pipeline/recovery-system/include/: recovery_system.h
src/video-pipeline/recovery-system/src/: recovery_system.cpp
src/video-pipeline/shaders/: rotate_crop_ccw20.frag  rotate_crop_cw20.frag
src/video-pipeline/storage-writer/: CMakeLists.txt  README.md
src/video-pipeline/storage-writer/include/: storage_writer.h
src/video-pipeline/storage-writer/src/: storage_writer.cpp
src/video-pipeline/stream-sync/: CMakeLists.txt  README.md
src/video-pipeline/stream-sync/include/: stream_sync.h
src/video-pipeline/stream-sync/src/: stream_sync.cpp
tests/: __init__.py  test_deploy_safe_script_contracts.py  test_pipeline_builders.py  test_pipeline_manager.py  test_preview_service.py  test_recording_regression_matrix.py  test_recording_service.py  test_system_contracts.py  test_ws_manager.py
(+129 files in other folders)
